ajout méthodes classe creature et médecin