@@ -7,6 +7,7 @@ import com.fantasyhospital.salles.Salle;
 import com.fantasyhospital.salles.servicemedical.ServiceMedical;
 
 import java.util.ArrayList;
+import java.util.LinkedHashSet;
 import java.util.List;
 
 import org.slf4j.Logger;
@@ -18,13 +19,13 @@ public class Simulation {
     private static final Logger logger = LoggerFactory.getLogger(Simulation.class);
 
     public static void main(String[] args) {
-        List<Creature> creatures = new ArrayList<>();
+        LinkedHashSet<Creature> creatures = new LinkedHashSet<>();
 
         ServiceMedical urgence = new ServiceMedical("Urgence", 50.0, 10, "Mediocre");
         ServiceMedical psychologie = new ServiceMedical("Psychologie", 100.0, 10, "Moyen");
         Salle salleAttente = new Salle("Salle d'attente", 70, 100);
 
-        Medecin docTest = new Medecin("Dr. Zoidberg", "H", 70, 175, 45, 100, "Lycanthrope", urgence);
+        Medecin medecin = new Medecin("Dr. Zoidberg", "H", 70, 175, 45, 100, "Lycanthrope", urgence);
 
         for (int i = 0; i < 5; i++) {
             Creature creature = Game.randomCreature();
@@ -41,9 +42,20 @@ public class Simulation {
         salleAttente.setCreatures(creatures);
 
         //salleAttente.ajouterCreature(creatures.get(1));
-        urgence.ajouterMedecin(docTest);
-        //urgence.afficherInfosService();
-        //psychologie.afficherInfosService();
+        urgence.ajouterMedecin(medecin);
+        Creature creature = salleAttente.getRandomCreature();
+        creature.setMoral(0);
+        for(int i = 0; i < 50; i++){
+            creature.verifierMoral(salleAttente);
+        }
+
+        salleAttente.afficherInfosService();
+
+//        medecin.transferer(salleAttente.getCreatures().iterator().next(), salleAttente, urgence);
+//        urgence.afficherInfosService();
+//        medecin.transferer(urgence.getCreatures().iterator().next(), urgence, psychologie);
+//        urgence.afficherInfosService();
+//        psychologie.afficherInfosService();
         salleAttente.afficherInfosService();
 
         //docTest.transferer(salleAttente.getCreatures().get(0),salleAttente, urgence);
@@ -56,9 +68,9 @@ public class Simulation {
         //psychologie.afficherInfosService();
         //salleAttente.afficherInfosService();
 
-        salleAttente.getCreatures().get(0).tomberMalade(new Maladie());
+        //salleAttente.getCreatures().getFirst().tomberMalade(new Maladie());
 
-        salleAttente.afficherInfosService();
+        //salleAttente.afficherInfosService();
 
 
     }
